[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.1",features = ["derive"]}
colored = "2.0.0"
globset = "0.4.10"
regex = "1.7.3"
tokio = {version = "1.27.0",features = ["full"]}

